# GRAMGPT

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AUDIT_REPORT.md  BUILD.txt  COMMANDS.md  COMPLETE_SUCCESS_REPORT.txt  COMPLETE_TESTING_VERIFICATION.md  DEPLOYMENT.md  DIAGNOSTICS_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile  E2E_TEST_README.md  FINAL_TEST_REPORT.md  FINAL_TEST_VERDICT.txt  FULL_TEST_REPORT.md  GRAM.txt  LAUNCH_CHECKLIST.md  LAUNCH_SUCCESS.md  LIVE_TEST_GUIDE.md  MERGED_FEATURES.md  PRODUCTION_LAUNCH_REPORT.txt  PROGRESS_REPORT.md  PROMPTS_GUIDE.md  QUICK_LAUNCH_GUIDE.md  QUICK_START.txt  README.md  README_CLIENT.md  README_ULTIMATE.md  REAL_CHANNEL_TEST_GUIDE.md  REAL_STATUS.md  REAL_STATUS_CORRECTED.md  REAL_TESTING_SUCCESS_REPORT.md  SESSION_5_SUMMARY.md  SESSION_SUMMARY.md  STATUS.txt  STRATEGIC_PLAN.md  TESTING_SUMMARY.txt  TEST_REPORT.md  (+24 more)
.github/workflows/: ci-cd.yml
.opencode/: render-creds.txt
data/: e2e_sniper_test_20260505_222751.json  training_data.json
data/sessions/: api_task.session  e2e_test.session  gramgpt_user.session
docs/: producthunt.md
monitoring/: prometheus.yml
scripts/: discover_and_promo.py  generate_data.py  generate_telethon_session.py
src/: app.py  celery_app.py  config.py  main.py
src/api/: main.py  web3.py
src/core/: __init__.py  (+20 more)
tests/: test_api_endpoints.py  test_config.py  test_core_services.py  test_database.py  test_emulation.py  test_memory.py  test_multi_account_analytics.py  test_new_services.py  test_pipeline_advanced.py  test_promo_workflow.py  test_send_comment_advanced.py
(+85 files in other folders)
