[project]
name = "gramgpt"
version = "1.0.0"
description = "GRAMGPT — AI-powered Telegram automation platform"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi[standard]>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "aiohttp>=3.9.0",
    "telethon>=1.33.0",
    "celery>=5.4.0",
    "redis>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
